// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`detectInjection — English corpus baseline (AC-1) > inj-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "markup-fake-tokens",
  ],
  "score": 45,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "markup-injected-tags",
  ],
  "score": 45,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "jailbreak-dan",
  ],
  "score": 40,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-05 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-new-instructions",
    "role-you-are-now",
  ],
  "score": 45,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-06 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-act-as",
    "jailbreak-developer-mode",
  ],
  "score": 55,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-07 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-you-are-now",
    "leak-repeat-instructions",
  ],
  "score": 55,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-08 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "override-new-instructions",
    "role-system-marker",
  ],
  "score": 85,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-09 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-act-as",
    "leak-what-is-your-prompt",
  ],
  "score": 55,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-10 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "markup-fake-tokens",
  ],
  "score": 75,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-obf-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-obf-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-obf-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-obf-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-new-instructions",
    "role-you-are-now",
  ],
  "score": 45,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > inj-obf-05 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
  ],
  "score": 30,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-you-are-now",
  ],
  "score": 20,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "leak-what-is-your-prompt",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-05 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-new-instructions",
  ],
  "score": 25,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-06 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "jailbreak-developer-mode",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-07 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "leak-repeat-instructions",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-08 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-09 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-10 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-act-as",
  ],
  "score": 20,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-11 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-act-as",
  ],
  "score": 20,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-12 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-13 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-14 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-15 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "role-act-as",
  ],
  "score": 20,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-16 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-17 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-18 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-19 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-20 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "leak-what-is-your-prompt",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-21 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-22 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-23 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-24 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-25 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-26 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-27 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-28 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-29 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-30 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-31 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-32 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-33 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-34 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-35 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-36 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-37 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-38 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-39 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > legit-40 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-05 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-06 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-07 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-08 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-09 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > off-10 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-b64 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-homo produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-leet produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-rev produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-rot13 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-spaced produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-enc-zw produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-hypo-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-hypo-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-hypo-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-l2-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
    "leak-repeat-instructions",
  ],
  "score": 65,
  "verdict": "block",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-l2-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-l2-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-new-instructions",
  ],
  "score": 25,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-lang-de produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-lang-mix produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "override-ignore-prior",
  ],
  "score": 30,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-lang-pl produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-lang-uk produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manip-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manip-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manip-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manip-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manip-05 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-manyshot-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "leak-what-is-your-prompt",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-role-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-role-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-role-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-split-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-split-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [
    "leak-repeat-instructions",
  ],
  "score": 35,
  "verdict": "suspect",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-virt-01 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-virt-02 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-virt-03 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;

exports[`detectInjection — English corpus baseline (AC-1) > rt-virt-04 produces a stable verdict and score 1`] = `
{
  "matchedRuleIds": [],
  "score": 0,
  "verdict": "allow",
}
`;
